<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parentLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <GridLayout
        android:rowCount="4"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/collectItemsSecondPhoto"
            android:layout_width="115dp"
            android:layout_height="175dp"
            android:layout_rowSpan="4"/>
        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_column="1"
            android:layout_row="0">
            <TextView
                android:id="@+id/collectItemsSecondName"
                android:textSize="20sp"
                android:gravity="start"
                android:text="@string/collect_items_product_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"/>
            <ImageButton
                android:id="@+id/collectItemsSecondHideViewPager"
                android:src="@drawable/ic_keyboard_arrow_down"
                android:scaleType="fitXY"
                android:background="@color/TRANSPARENT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/collectItemsDescriptionLL"
            android:orientation="vertical"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1">
            <TextView
                android:id="@+id/collectItemsSecondDescription"
                android:text="@string/collect_items_product_description"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"/>
                <Button
                    android:id="@+id/collectItemsSecondMoreInfo"
                    android:textSize="13sp"
                    android:text="@string/collect_items_product_more_info"
                    android:background="@color/TRANSPARENT"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/collectItemsSecondProductLink"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/collect_items_product_link"
            android:layout_column="1"
            android:layout_row="2"/>
        <TextView
            android:id="@+id/collectItemsSecondProductPrice"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/collect_items_product_price"
            android:layout_column="1"
            android:layout_row="3"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>